tests/negative/neg_pr116_legacy_end_if.safe
package Neg_PR116_Legacy_End_If

   function Broken returns Integer

      if True
         return 1;

      end if
